corrected catalog on mobile

--- a/source/sass/blocks/slider-item.scss
+++ b/source/sass/blocks/slider-item.scss
@@ -5,10 +5,6 @@
   @media (max-width: $desktop-breakpoint) {
     width: 324px;
   }
-
-  @media (max-width: $tablet-breakpoint) {
-    max-width: 130px;
-  }
 }
 
 .slider-item img {
